TAG: uniprotload-5-0-0-3
DATE: 05/09/2012
STAFF: lec
CHANGES:
1) TR11054
UNIPROT_ACC_ASSOC_ERR_FILE file
UNIPROT_SP_ASSOC_ERR_FILE
UNIPROT_TR_ASSOC_ERR_FILE
error files of uniprot ids that contain neither EntrezGene nor Ensembl ids

TAG: uniprotload-5-0-0-2
TAG: uniprotload-5-0-0-1
DATE: 04/03/2012, 04/11/2012
STAFF: lec
CHANGES:
1) TR11030/prevent use of GO:0005488

TAG: uniprotload-4-4-1-8
TAG: uniprotload-4-4-1-7
DATE: 03/05/2012
STAFF: lec
CHANGES:
1) TR10950
/data/downloads/ftp.geneontology.org/pub/go/external2go/spkw2go 
	changed to 'uniprotkb_kw2go'
within this file:
field 1: 'SP_KW' changed to 'UniProtKB-KW'

TAG: uniprotload-4-4-1-6
DATE: 01/03/2012
STAFF: lec
CHANGES:
1) TR10934/makeGOAnnot.py
   change comma delimiter to pipe
2) uniprotload.sh
   remove *.diagnostic and *.error

TAG: uniprotload-4-4-1-5
TAG: uniprotload-4-4-1-4
DATE: 09/15/2011
STAFF: lec
CHANGES:
1) mgi_uniprot.1_0.py; called from makeBuckets.sh

TAG: uniprotload-4-4-1-3
DATE: 06/23/2011
STAFF: lec
CHANGES:
1) makeGOAnnot.py; readMGI2MARKERTYPE; was skipping first line of file

TAG: uniprotload-4-4-1-2
DATE: 02/28/2011
STAFF: lec
CHANGES:
1) makeGOAnnot.py; EC; if markers is not in mgi_acc_assoc.txt, then skip

TAG: uniprotload-4-4-1-1
DATE: 01/11/2011
STAFF: lec
CHANGES:
1) TR10521/prevent use of GO:0005515

TAG: uniprotload-4-4-0-6
TAG: uniprotload-4-4-0-5
TAG: uniprotload-4-4-0-4
TAG: uniprotload-4-4-0-3
TAG: uniprotload-4-4-0-2
DATE: 11/10/2010, 11/11/2010, 12/01/2010
STAFF: lec
CHANGES:
1) TR10443/makeGOAnnot.py/attach correct UniProtKB to IP/SP annotations
2) processIP2GO,processSPKW2GO was commented out during last test

TAG: uniprotload-4-4-0-1
DATE: 10/13/2010
STAFF: lec
CHANGES:
1) TR10411/UniProtParser.py/strip out "." in DR records

TAG: uniprotload-4-3-3-22
DATE: 08/23/2010
STAFF: lec
CHANGES:
1) makeGOAnnot.py
   TR 5430/change nonIEA_annot from list to dictionary for speed
   and remove the test query from the openFiles/nonIEA_annot dictionary

TAG: uniprotload-4-3-3-21