@@ -71,6 +71,7 @@ UNIPROT_ACC_ASSOC_ERR_FILE=${OUTPUTDIR}/uniprot_acc_assoc_err.txt
 #
 UNIPROT_SP_ASSOC_FILE=${OUTPUTDIR}/uniprot_sp_assoc.txt
 UNIPROT_SP_ASSOC_ERR_FILE=${OUTPUTDIR}/uniprot_sp_assoc_err.txt
+UNIPROT_SP_ASSOC_MGI_FILE=${OUTPUTDIR}/uniprot_sp_assoc_mgi.txt
 
 # UniProt to EntrezGene/Ensembl associations from UniProt input file
 # TrEMBL
@@ -102,7 +103,7 @@ export INPUTFILE INFILE_NAME INFILE_MINIMUM_SIZE
 export EC2GOFILE IP2GOFILE SPKW2GOFILE
 export MGI_ACC_ASSOC_FILE 
 export UNIPROT_ACC_ASSOC_FILE UNIPROT_ACC_ASSOC_ERR_FILE
-export UNIPROT_SP_ASSOC_FILE UNIPROT_SP_ASSOC_ERR_FILE
+export UNIPROT_SP_ASSOC_FILE UNIPROT_SP_ASSOC_ERR_FILE UNIPROT_SP_ASSOC_MGI_FILE
 export UNIPROT_TR_ASSOC_FILE UNIPROT_TR_ASSOC_ERR_FILE
 export MGI_UNIPROT_LOAD_FILE MGI_SWISSPROT_LOAD_FILE
 export INFILE_1_0 OUTPUT_1_0_PROTEINCODING
