@@ -1,3 +1,10 @@
+TAG: uniprotload-5-0-0-?
+DATE: 05/14/2012
+STAFF: lec
+CHANGES:
+1) TR11071
+UNIPROT_SP_ASSOC_MGI_FILE
+
 TAG: uniprotload-5-0-0-3
 DATE: 05/09/2012
 STAFF: lec
